@@ -9,6 +9,11 @@ class RDoc::Generator::RI
   RDoc::RDoc.add_generator self
 
   ##
+  # Description of this generator
+
+  DESCRIPTION = 'creates ri data files'
+
+  ##
   # Set up a new ri generator
 
   def initialize options #:not-new:
