@@ -174,14 +174,17 @@ class RDoc::Task < Rake::TaskLib
   ##
   # All source is inline now.  This method is deprecated
 
-  def inline_source()
+  def inline_source() # :nodoc:
     warn "RDoc::Task#inline_source is deprecated"
     true
-  end # :nodoc:
+  end
 
-  def inline_source=(value)
+  ##
+  # All source is inline now.  This method is deprecated
+
+  def inline_source=(value) # :nodoc:
     warn "RDoc::Task#inline_source is deprecated"
-  end # :nodoc:
+  end
 
   ##
   # Create the tasks defined by this task lib.
