@@ -8,6 +8,8 @@ otherwise noted.
     generator.  Pull Request #2 by Erik Hollensbe.
   * Enhanced test for RDoc::Parser::binary?  RubyForge patch #28538 by Eito
     Katagiri.
+  * Generator list in --help is no longer static.  Generator description comes
+    from the generator's DESCRIPTION constant.
 * Bug fixes
   * Strip encoding comment from input to avoid overriding file comment.
     RubyForge Bug #22113 by James Gray.
